updated some styling because there was a bug on some pages as well where some divs were overflowing over the html file in browser, when in a mobile view.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,7 @@
   margin: 0;
   width: 100%;
   height: 100vh;
+  box-sizing: border-box;
 }
 
 html, body {
